# lammpc

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  pixi.toml
.github/workflows/: ci.yml
include/: lammpc.h  lammpc_features.h
scripts/: build_lammps.sh
src/: lammpc_capabilities.c  lammpc_embed.cpp  lammpc_features.c  lammpc_params.c  lammpc_params.h  lammpc_stub.c
subprojects/: potentials-schema.wrap
tests/: test_capabilities_cmocka.c  test_embed_lj_e2e.c  test_params_roundtrip_cmocka.c  test_stub_abi.c
